Removed description properties and update tests